[package]
name = "next"
version = "0.1.0"
authors = ["lyj <sjtu5140809011@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chinese-lunisolar-calendar = "0.1.24"
lychee-lib = "0.13.0"
serde_json = "1.0.107"
ssh2-config = "0.2.2"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
reqwest = "0.11.22"
image = "0.24.7"
anyhow = "1.0.75"
rand = "0.8.5"
walkdir = "2.4.0"
